・アイコンの間隔の設定機能を追加した。 ・設定の保存時に画面の内容を反映していなかった不具合を修正した。 ・バージョン番号を1.20とした。

--- a/ReMetrics.rc
+++ b/ReMetrics.rc
@@ -58,7 +58,7 @@ END
 // Dialog
 //
 
-IDD_MAIN_DIALOG DIALOGEX 0, 0, 147, 185
+IDD_MAIN_DIALOG DIALOGEX 0, 0, 147, 217
 STYLE DS_SETFONT | DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Re-Metrics"
 MENU IDR_MENU1
@@ -94,8 +94,14 @@ BEGIN
     LTEXT           "ウインドウの境界の間隔",IDC_STATIC,7,142,77,12
     EDITTEXT        IDC_EDIT_PADDING,104,142,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
     CONTROL         "",IDC_SPIN_PADDING,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,142,10,12
-    DEFPUSHBUTTON   "OK",IDOK,56,164,41,14,WS_GROUP
-    PUSHBUTTON      "キャンセル",IDCANCEL,100,164,41,14,WS_GROUP
+    LTEXT           "アイコンの間隔(横)",IDC_STATIC_ICON_HOL,7,157,77,12
+    EDITTEXT        IDC_EDIT_ICON_HOLI,104,157,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_ICON_HOLI,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,157,10,12
+    LTEXT           "アイコンの間隔(縦)",IDC_STATIC_ICON_VER,7,172,77,12
+    EDITTEXT        IDC_EDIT_ICON_VERT,104,172,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_ICON_VERT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,172,10,12
+    DEFPUSHBUTTON   "OK",IDOK,56,196,41,14,WS_GROUP
+    PUSHBUTTON      "キャンセル",IDCANCEL,100,196,41,14,WS_GROUP
 END
 
 
@@ -112,7 +118,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 141
         TOPMARGIN, 7
-        BOTTOMMARGIN, 178
+        BOTTOMMARGIN, 210
     END
 END
 #endif    // APSTUDIO_INVOKED
