多言語対応のため、以下の作業を行った。
言語ファイルから読み込んだファイルを表示に反映できるようにした。
言語・フォントに対応するため表示を大きくした。

--- a/program/ReMetrics.rc
+++ b/program/ReMetrics.rc
@@ -1,7 +1,3 @@
-//
-// Re-Metrics (C) 2012-2017 Tatsuhiko Shoji
-// The sources for Re-Metrics are distributed under the MIT open source license
-//
 // Microsoft Visual C++ generated resource script.
 //
 #include "resource.h"
@@ -58,50 +54,50 @@ END
 // Dialog
 //
 
-IDD_MAIN_DIALOG DIALOGEX 0, 0, 147, 217
+IDD_MAIN_DIALOG DIALOGEX 0, 0, 180, 287
 STYLE DS_SETFONT | DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Re-Metrics"
 MENU IDR_MENU1
 FONT 10, "ＭＳ Ｐゴシック", 400, 0, 0x80
 BEGIN
-    LTEXT           "ウインドウの境界",IDC_STATIC,7,7,77,12
-    EDITTEXT        IDC_EDIT_BORDER,104,7,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_BORDER,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,7,10,12
-    LTEXT           "タイトルバーの幅",IDC_STATIC,7,22,77,12
-    EDITTEXT        IDC_EDIT_TITLE_WIDTH,104,22,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_TITLE_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,22,10,12
-    LTEXT           "タイトルバーの高さ",IDC_STATIC,7,37,77,12
-    EDITTEXT        IDC_EDIT_TITLE_HEIGHT,104,37,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_TITLE_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,37,10,12
-    LTEXT           "スクロールバーの幅",IDC_STATIC,7,53,77,12
-    EDITTEXT        IDC_EDIT_SCROLL_WIDTH,104,53,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_SCROLL_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,52,10,12
-    LTEXT           "スクロールバーの高さ",IDC_STATIC,7,67,90,12
-    EDITTEXT        IDC_EDIT_SCROLL_HEIGHT,104,67,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_SCROLL_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,67,10,12
-    LTEXT           "パレットの幅",IDC_STATIC,7,82,77,12
-    EDITTEXT        IDC_EDIT_PALETTE_WIDTH,104,82,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_PALETTE_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,82,10,12
-    LTEXT           "パレットの高さ",IDC_STATIC,7,97,77,12
-    EDITTEXT        IDC_EDIT_PALETTE_HEIGHT,104,97,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_PALETTE_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,97,10,12
-    LTEXT           "メニューの幅",IDC_STATIC,7,112,77,12
-    EDITTEXT        IDC_EDIT_MENU_WIDTH,104,112,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_MENU_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,112,10,12
-    LTEXT           "メニューの高さ",IDC_STATIC,7,127,77,12
-    EDITTEXT        IDC_EDIT_MENU_HEIGHT,104,127,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_MENU_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,127,10,12
-    LTEXT           "ウインドウの境界の間隔",IDC_STATIC,7,142,77,12
-    EDITTEXT        IDC_EDIT_PADDING,104,142,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_PADDING,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,142,10,12
-    LTEXT           "アイコンの間隔(横)",IDC_STATIC_ICON_HOL,7,157,77,12
-    EDITTEXT        IDC_EDIT_ICON_HOLI,104,157,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_ICON_HOLI,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,157,10,12
-    LTEXT           "アイコンの間隔(縦)",IDC_STATIC_ICON_VER,7,172,77,12
-    EDITTEXT        IDC_EDIT_ICON_VERT,104,172,28,12,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_SPIN_ICON_VERT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,131,172,10,12
-    DEFPUSHBUTTON   "OK",IDOK,56,196,41,14,WS_GROUP
-    PUSHBUTTON      "キャンセル",IDCANCEL,100,196,41,14,WS_GROUP
+    LTEXT           "ウインドウの境界",IDC_BORDER_WIDTH,7,7,125,12
+    EDITTEXT        IDC_EDIT_BORDER,136,7,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_BORDER,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,7,10,19
+    LTEXT           "タイトルバーの幅",IDC_TITLEBAR_WIDTH,7,28,125,12
+    EDITTEXT        IDC_EDIT_TITLE_WIDTH,136,28,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_TITLE_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,28,10,19
+    LTEXT           "タイトルバーの高さ",IDC_TITLEBAR_HEIGHT,7,49,125,12
+    EDITTEXT        IDC_EDIT_TITLE_HEIGHT,136,49,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_TITLE_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,49,10,19
+    LTEXT           "スクロールバーの幅",IDC_SCROLL_WIDTH,7,70,125,12
+    EDITTEXT        IDC_EDIT_SCROLL_WIDTH,136,70,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_SCROLL_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,70,10,19
+    LTEXT           "スクロールバーの高さ",IDC_SCROLL_HEIGHT,7,91,125,12
+    EDITTEXT        IDC_EDIT_SCROLL_HEIGHT,136,91,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_SCROLL_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,91,10,19
+    LTEXT           "パレットの幅",IDC_PALETTE_WIDTH,7,112,125,12
+    EDITTEXT        IDC_EDIT_PALETTE_WIDTH,136,112,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_PALETTE_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,112,10,19
+    LTEXT           "パレットの高さ",IDC_PALETTE_HEIGHT,7,133,125,12
+    EDITTEXT        IDC_EDIT_PALETTE_HEIGHT,136,133,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_PALETTE_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,133,10,19
+    LTEXT           "メニューの幅",IDC_MENU_WIDTH,7,154,125,12
+    EDITTEXT        IDC_EDIT_MENU_WIDTH,136,154,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_MENU_WIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,154,10,19
+    LTEXT           "メニューの高さ",IDC_MENU_HEIGHT,7,175,125,12
+    EDITTEXT        IDC_EDIT_MENU_HEIGHT,136,175,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_MENU_HEIGHT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,175,10,19
+    LTEXT           "ウインドウの境界の間隔",IDC_WINDOW_PADDING,7,196,125,12
+    EDITTEXT        IDC_EDIT_PADDING,136,196,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_PADDING,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,196,10,19
+    LTEXT           "アイコンの間隔(横)",IDC_ICON_HORIZONTAL_MARGIN,7,217,125,12
+    EDITTEXT        IDC_EDIT_ICON_HOLI,136,217,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_ICON_HOLI,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,217,10,19
+    LTEXT           "アイコンの間隔(縦)",IDC_ICON_VERTICAL_MARGIN,7,238,125,12
+    EDITTEXT        IDC_EDIT_ICON_VERT,136,238,28,19,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_SPIN_ICON_VERT,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_GROUP | WS_TABSTOP,164,238,10,19
+    DEFPUSHBUTTON   "OK",IDOK,61,264,55,16,WS_GROUP
+    PUSHBUTTON      "キャンセル",IDCANCEL,119,264,55,16,WS_GROUP
 END
 
 
@@ -116,9 +112,9 @@ BEGIN
     IDD_MAIN_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 141
+        RIGHTMARGIN, 174
         TOPMARGIN, 7
-        BOTTOMMARGIN, 210
+        BOTTOMMARGIN, 280
     END
 END
 #endif    // APSTUDIO_INVOKED
