--- a/program/ReMetrics.vcxproj.filters
+++ b/program/ReMetrics.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="TWR\NCFileDialog.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="iniReader.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="util.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ReMetrics.h">
@@ -96,6 +102,15 @@
       <Filter>ヘッダー ファイル\TWR</Filter>
     </ClInclude>
     <ClInclude Include="TWR\NCFileDialog.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="iniReader.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="langdef.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
