--- a/program/ReMetrics.rc
+++ b/program/ReMetrics.rc
@@ -1,3 +1,7 @@
+//
+// Re-Metrics (C) 2012-2017,2020 Tatsuhiko Shoji
+// The sources for Re-Metrics are distributed under the MIT open source license
+//
 // Microsoft Visual C++ generated resource script.
 //
 #include "resource.h"
@@ -157,8 +161,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,2,0,0
- PRODUCTVERSION 1,2,0,0
+ FILEVERSION 1,3,0,0
+ PRODUCTVERSION 1,3,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -175,12 +179,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "T.Syoji's Personal Development"
             VALUE "FileDescription", "Re-Metrics"
-            VALUE "FileVersion", "1.2.0.0"
+            VALUE "FileVersion", "1.3.0.0"
             VALUE "InternalName", "ReMetrics"
-            VALUE "LegalCopyright", "Copyright (C) Tatsuhiko Syoji 2012-2017"
+            VALUE "LegalCopyright", "Copyright (C) Tatsuhiko Syoji 2012-2017,2020"
             VALUE "OriginalFilename", "ReMetrics.exe"
             VALUE "ProductName", "Re-Metrics"
-            VALUE "ProductVersion", "1.2.0.0"
+            VALUE "ProductVersion", "1.3.0.0"
         END
     END
     BLOCK "VarFileInfo"
