--- a/program/ReMetrics.rc
+++ b/program/ReMetrics.rc
@@ -1,5 +1,5 @@
 //
-// Re-Metrics (C) 2012-2017,2020 Tatsuhiko Shoji
+// Re-Metrics (C) 2012-2017,2020,2021 Tatsuhiko Shoji
 // The sources for Re-Metrics are distributed under the MIT open source license
 //
 // Microsoft Visual C++ generated resource script.
@@ -227,6 +227,7 @@ BEGIN
         MENUITEM "Windows 7",                   IDM_SET_7
         MENUITEM "Windows 8/8.1",               IDM_SET_8
         MENUITEM "Windows 10",                  IDM_SET_10
+        MENUITEM "Windows 11",                  IDM_SET_11
     END
     POPUP "ÉcÅ[Éã(&T)"
     BEGIN
