--- a/program/ReMetrics.rc
+++ b/program/ReMetrics.rc
@@ -1,5 +1,5 @@
 //
-// Re-Metrics (C) 2012-2017,2020,2021,2022 Tatsuhiko Shoji
+// Re-Metrics (C) 2012-2017,2020-2023 Tatsuhiko Shoji
 // The sources for Re-Metrics are distributed under the MIT open source license
 //
 // Microsoft Visual C++ generated resource script.
@@ -179,12 +179,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "T.Syoji's Personal Development"
             VALUE "FileDescription", "Re-Metrics"
-            VALUE "FileVersion", "1.3.5.0"
+            VALUE "FileVersion", "1.3.6.0"
             VALUE "InternalName", "ReMetrics"
-            VALUE "LegalCopyright", "Copyright (C) Tatsuhiko Syoji 2012-2017,2020"
+            VALUE "LegalCopyright", "Copyright (C) Tatsuhiko Syoji 2012-2017,2020-2023"
             VALUE "OriginalFilename", "ReMetrics.exe"
             VALUE "ProductName", "Re-Metrics"
-            VALUE "ProductVersion", "1.3.5.0"
+            VALUE "ProductVersion", "1.3.6.0"
         END
     END
     BLOCK "VarFileInfo"
